--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "gui.h": "c",
         "portwrite.h": "c",
-        "joystickhandler.h": "c"
+        "joystickhandler.h": "c",
+        "pulsegen.h": "c"
     }
 }
