--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "gui.h": "c",
         "portwrite.h": "c",
         "joystickhandler.h": "c",
-        "pulsegen.h": "c"
+        "pulsegen.h": "c",
+        "tinytimber.h": "c"
     }
 }
