--- a/lab5/lab5/lab5/controller/Debug/Makefile
+++ b/lab5/lab5/lab5/controller/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../backend.c \
 ../gui.c \
 ../main.c \
 ../TinyTimber.c \
@@ -51,6 +52,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+backend.o \
 gui.o \
 main.o \
 TinyTimber.o \
@@ -58,6 +60,7 @@ traffic_light.o \
 USART.o
 
 OBJS_AS_ARGS +=  \
+backend.o \
 gui.o \
 main.o \
 TinyTimber.o \
@@ -65,6 +68,7 @@ traffic_light.o \
 USART.o
 
 C_DEPS +=  \
+backend.d \
 gui.d \
 main.d \
 TinyTimber.d \
@@ -72,6 +76,7 @@ traffic_light.d \
 USART.d
 
 C_DEPS_AS_ARGS +=  \
+backend.d \
 gui.d \
 main.d \
 TinyTimber.d \
@@ -92,6 +97,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./backend.o: .././backend.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.6.364\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega169p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.6.364\gcc\dev\atmega169p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./gui.o: .././gui.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
