helt ny simulation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
         "portwrite.h": "c",
         "joystickhandler.h": "c",
         "pulsegen.h": "c",
-        "tinytimber.h": "c"
+        "tinytimber.h": "c",
+        "simulation.h": "c",
+        "stdbool.h": "c",
+        "pcreader.h": "c",
+        "pcwriter.h": "c",
+        "bridge.h": "c"
     }
 }
