--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "stdbool.h": "c",
         "pcreader.h": "c",
         "pcwriter.h": "c",
-        "bridge.h": "c"
+        "bridge.h": "c",
+        "pthread.h": "c"
     }
 }
